...
                let viewController = UsersListScreenViewController()
                let navigationVC = UINavigationController(rootViewController: viewController)
                navigationVC.modalPresentationStyle = .fullScreen
                present(navigationVC, animated: true, completion: nil)
            } else {
                let alert = UIAlertController(title: "Invalid Entry", message: "User Email/Password Invalid", preferredStyle: .alert)
                alert.addAction(UIAlertAction(title: "OK", style: .cancel, handler: nil))
                self.present(alert, animated: true)
            }
        }
    }
}

...
